# pilot

./: .gitignore  README.md  pyproject.toml  requirements.txt  t2v.py  unicode.txt
MACaddress_changer/: mac_changer.py
bettercap/: install
find_file/: find_file
fnm/: fnm_install.sh
linux/: setup  wsl
network_mapper/: net_map.py
password_generator/: passwd_gen.py  utils.py
youtube_downloader/: main.py
