[project]
name = ""
version = ""
description = ""
authors = [
    {name = "danieljkpraveen", email = "danieljkpraveen@gmail.com"},
]
dependencies = [
    "scapy>=2.4.5",
    "PyQt5>=5.15.6"]
requires-python = ">=3.9"
license = {text = "MIT"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
